2002-10-11  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconfactory.c (gtk_icon_size_lookup_for_settings): 
	* gtk/gtknotebook.c (gtk_notebook_get_n_pages): 
	* gtk/gtkwindow.c (gtk_window_set_icon_from_file): 
	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_focus_cell): Fix
	doc comments.

	* gtk/gtktreestore.c: 
	* gtk/gtktreestore.h: Consistently name first parameter
	tree_store, and make header and implementation agree on parameter 
	names to silence gtk-doc.

	* gtk/gtkenums.h (enum): Comment typo fix.

Thu Oct 10 15:13:48 2002  Manish Singh  <yosh@gimp.org>

	* gtk/gtkimcontext.[ch] gtk/gtkimcontextsimple.[ch] gtk/gtkimmodule.c
	gtk/gtkimmulticontext.[ch] gtk/gtktreestore.[ch]: Deprecation
	cleanup

Thu Oct 10 14:58:47 2002  Manish Singh  <yosh@gimp.org>

	* gtk/gtkaccelgroup.c gtk/gtkarrow.[ch] gtk/gtkeventbox.[ch]
	gtk/gtkiconfactory.c gtk/gtkinvisible.[ch] gtk/gtktextchild.c:
	Deprecation cleanup

Thu Oct 10 14:41:05 2002  Manish Singh  <yosh@gimp.org>

	* gtk/gtktextbtree.c gtk/gtktextbuffer.c gtk/gtktextdisplay.c
	gtk/gtktextlayout.c gtk/gtktextmark.c gtk/gtktexttag.[ch]
	gtk/gtktexttagtable.c gtk/gtktextutil.c gtk/gtktextview.[ch]:
	Deprecation cleanup

Thu Oct 10 14:35:31 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkscrolledwindow.[ch]: Privately export
	_gtk_scrolled_window_get_scrollbar_spacing().

	* gtk/gtkcombo.c: Properly account from scrollbar
	spacing when computing the size of the popup window.
	(#84955, Marco Pesenti Gritti)

Wed Oct  9 17:40:13 2002  Manish Singh  <yosh@gimp.org>

	* gtk/gtkaccelmap.c gtk/gtkfixed.[ch] gtk/gtkkeyhash.c gtk/gtkmenu.c
	gtk/gtkobject.c gtk/gtkoldeditable.c gtk/gtkrc.c gtk/gtkspinbutton.[ch]
	gtk/gtktable.[ch] gtk/gtkthemes.c: Deprecation cleanup

Wed Oct  9 16:52:53 2002  Manish Singh  <yosh@gimp.org>

	* gtk/gtkclipboard.[ch] gtk/gtkeditable.[ch] gtk/gtkgc.c
	gtk/gtkoptionmenu.[ch] gtk/gtkselection.c gtk/gtksizegroup.[ch]:
	Deprecation cleanup

Wed Oct  9 15:23:48 2002  Manish Singh  <yosh@gimp.org>
